--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,11 @@ dependencies:
   equatable:
   get:
   get_storage:
-  google_maps_flutter:
+  google_maps_flutter: 
+  firebase_core:
+  firebase_analytics:
+  firebase_auth:
+  cloud_firestore:
   flutter:
     sdk: flutter
 
