--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,13 @@ environment:
 dependencies:
   http:
   equatable:
-  get:
-  get_storage:
-  google_maps_flutter: 
-  firebase_core:
-  firebase_analytics:
-  firebase_auth:
-  cloud_firestore:
+  get: ^3.4.6
+  get_storage: ^1.3.0
+  google_maps_flutter: ^0.5.30
+  firebase_core: ^0.5.0
+  firebase_analytics: ^6.0.0
+  firebase_auth: ^0.18.0
+  cloud_firestore: ^0.14.0
   flutter:
     sdk: flutter
 
