--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,6 @@ environment:
 
 dependencies:
   http:
-  equatable:
   get: ^3.4.6
   get_storage: ^1.3.0
   google_maps_flutter: ^0.5.30
@@ -30,6 +29,8 @@ dependencies:
   firebase_analytics: ^6.0.0
   firebase_auth: ^0.18.0
   cloud_firestore: ^0.14.0
+  cloud_functions: ^0.6.0
+  table_calendar: ^2.2.3
   flutter:
     sdk: flutter
 
