--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,10 +18,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.9.0 <3.0.0"
 
 dependencies:
-  http:
+  http: ^0.12.2
   get: ^3.4.6
   get_storage: ^1.3.0
   google_maps_flutter: ^0.5.30
