--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   table_calendar: ^2.2.3
   location: ^3.0.2
   app_settings: ^4.0.3
+  flutter_polyline_points: ^0.2.3
   flutter:
     sdk: flutter
 
