--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ app.*.map.json
 
 # Google
 android/app/google-services.json
+ios/Runner/AppDelegate.swift
+android/app/src/main/AndroidManifest.xml
