Fixed too many calls to Google Maps API Made it so the Google Maps API is only called if we're stranding from our path.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   intl: ^0.16.1
   date_format: ^1.0.8
   supercharged: ^1.10.0
+  maps_toolkit: ^1.1.0+2
   flutter:
     sdk: flutter
 
