--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter_dotenv: ^2.1.0
   http: ^0.12.2
-  get: ^3.4.6
+  get: ^3.10.2
   get_storage: ^1.3.0
   google_maps_flutter: ^0.5.30
   firebase_core: ^0.5.0
@@ -48,6 +48,7 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
+  get_test: ^3.12.3
   flutter_test:
     sdk: flutter
   mockito:
